# notification-hub

./: .gitignore  AGENTS.md  CLAUDE.md  DOC-RECONCILIATION.md  HANDOFF.md  IMPLEMENTATION-ROADMAP.md  README.md  SECURITY.md  pyproject.toml
.codex/: verify.commands
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
config/: policy.example.toml
docs/: CURRENT-STATE.md  DELIVERY-RELIABILITY-ACCEPTANCE.md  PRODUCT-BOUNDARY.md
docs/adr/: 0001-lineage-rich-vs-thin-supersession.md  0002-durable-inbox-dead-letter-box.md  0003-delivery-semantics-and-bridge-cursor.md
docs/proof-packages/20260607-personal-ops-queue-burn-in/: SUMMARY.md  proof-package.json
mcp_server/: README.md  config.json  fastmcp.json  pyproject.toml  server.py  test_server.py
ops/: AGENTS.md
ops/hooks/: claude-notify.sh  codex-notify-local.py  notification-hub-producer.py
ops/launchagents/: com.saagar.notification-hub.plist
src/notification_hub/: AGENTS.md  __init__.py  __main__.py  bridge_cursor.py  channels.py  classifier.py  cli.py  cli_parser.py  cli_reports.py  config.py  coordination.py  delivery_readback.py  diagnostics.py  durable_inbox.py  models.py  operations.py  operations_actions.py  operations_inbox.py  operations_logs.py  operations_packages.py  operations_proposals.py  operations_types.py  pipeline.py  producer_health.py  server.py  suppression.py  watcher.py
tests/: cli_report_fixtures.py  conftest.py  coordination_console_fixtures.py  test_action_proposal_groups.py  test_action_review_packages.py  test_bridge_cursor.py  test_channels.py  test_classifier.py  test_cli_commands.py  test_cli_wrapper_commands.py  test_config.py  test_coordination.py  test_coordination_console.py  test_coordination_console_follow_up.py  test_coordination_console_lineage.py  test_coordination_console_queue.py  test_delivery_e2e_fixture.py  test_delivery_readback.py  test_diagnostics.py  test_durable_inbox.py  test_hooks.py  test_inbox_action_exports.py  test_logs_burn_in_diagnostics.py  test_models.py  test_operations.py  test_operator_review_sessions.py  test_operator_state_reports.py  test_personal_ops_queue.py  test_pipeline.py  test_producer_health.py  test_producer_outbox.py  test_readme_commands.py  test_retention_policy_operations.py  test_review_endpoints.py  test_review_operator_endpoints.py  test_review_package_endpoints.py  test_review_proposal_endpoints.py  test_runtime_diagnostics.py  test_server.py  test_suppression.py  (+1 more)
