[project]
name = "notification-hub"
version = "0.1.0"
description = "Unified notification daemon for Claude Code, Codex, and Claude.ai"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "watchdog>=6.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
]

[project.scripts]
notification-hub = "notification_hub.cli:main"
notification-hub-doctor = "notification_hub.cli:doctor_main"
notification-hub-smoke = "notification_hub.cli:smoke_main"
notification-hub-status = "notification_hub.cli:status_main"
notification-hub-logs = "notification_hub.cli:logs_main"
notification-hub-verify-runtime = "notification_hub.cli:verify_runtime_main"
notification-hub-policy-check = "notification_hub.cli:policy_check_main"
notification-hub-explain = "notification_hub.cli:explain_main"
notification-hub-retention = "notification_hub.cli:retention_main"
notification-hub-bootstrap-config = "notification_hub.cli:bootstrap_config_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notification_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
exclude = ["ops/hooks"]

[tool.ruff]
target-version = "py312"
line-length = 100
