[project]
name = "notification-hub-mcp"
version = "0.1.0"
description = "A FastMCP server named notification-hub-mcp"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]